--- a/summary.html
+++ b/summary.html
@@ -5,9 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+
+    <link rel="stylesheet" href="summary_style.css">
+    <link rel="stylesheet" href="fonts.css">
 </head>
 <body>
     <div class="content">
+        <div class="lefter"></div>
+        <div class="innercontent">
+            <div class="topper">
+                <span>Kanban Project Management Tool</span>
+                <div class="img_topper">
+                    <img src="assets/img/questionmark_topper.png" class="questionmark_topper">
+                    <img src="assets/img/profile_pic.png" class="profile_pic">
+                </div>
+            </div>
+        </div>
     </div>
     
 </body>
