left side topper first

--- a/summary.html
+++ b/summary.html
@@ -11,7 +11,29 @@
 </head>
 <body>
     <div class="content">
-        <div class="lefter"></div>
+        <div class="nav-bar">
+            <img src="assets/img/logo_lefter.png">
+            <div class="content-section" style="margin-top: 100px;">
+                <img src="assets/img/icon-summary.png">
+                <span>Summary</span>
+            </div>
+            <div class="content-section">
+                <img src="assets/img/icon-board.png">
+                <span>Board</span>
+            </div>
+            <div class="content-section">
+                <img src="assets/img/icon-addtask.png">
+                <span>Add Task</span>
+            </div>
+            <div class="content-section">
+                <img src="assets/img/icon-contacts.png">
+                <span>Contacts</span>
+            </div>
+            <div class="content-section" style="margin-top: 180px;">
+                <img src="assets/img/icon-info.png">
+                <span>Legal notice</span>
+            </div>
+        </div>
         <div class="innercontent">
             <div class="topper">
                 <span>Kanban Project Management Tool</span>
