--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div class="complete-page">
         <div class="join-logo"><img src="assets/img/Capa 2join-logo.png" alt=""></div>
 
-        <div class="login-display d-none">
+        <div class="login-display">
             <div class="login-head">
                 <span>Not a Join user?</span>
                 <Button>Sign up</Button>
@@ -81,7 +81,7 @@
 
 
 
-        <div class="forgot-password-display">
+        <div class="forgot-password-display d-none">
             <div class="forgot-password-area">
                 <div class="arrow"><img src="assets/img/arrow-121-32.png"></div>
 
@@ -100,6 +100,34 @@
                 </div>
 
                 <div class="button">Send me the email</div>
+
+            </div>
+
+        </div>
+
+        <div class="reset-password-display d-none">
+            <div class="reset-password-area">
+                <div class="arrow"><img src="assets/img/arrow-121-32.png"></div>
+
+                <div class="headline">
+                    <h1>Reset your password</h1>
+                </div>
+
+                <div class="headline-underline"></div>
+
+                <div class="info-div">
+                    <span>Change your account password</span>
+                </div>
+
+                <div class="reset-password-field">
+                    <input type="text" class="form-control" placeholder="New password" aria-label="First name">
+                </div>
+
+                <div class="reset-password-field">
+                    <input type="text" class="form-control" placeholder="Confirm password" aria-label="First name">
+                </div>
+
+                <div class="continue-button">Continue</div>
 
             </div>
 
