first commit content summary

--- a/summary.html
+++ b/summary.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,41 +10,71 @@
     <link rel="stylesheet" href="summary_style.css">
     <link rel="stylesheet" href="fonts.css">
 </head>
+
 <body>
     <div class="content">
         <div class="nav-bar">
             <img src="assets/img/logo_lefter.png">
             <div class="content-section" style="margin-top: 100px;">
-                <img src="assets/img/icon-summary.png">
+                <div>
+                    <img src="assets/img/icon-summary.png">
+                </div>
                 <span>Summary</span>
             </div>
             <div class="content-section">
-                <img src="assets/img/icon-board.png">
+                <div>
+                    <img src="assets/img/icon-board.png">
+                </div>
                 <span>Board</span>
             </div>
             <div class="content-section">
-                <img src="assets/img/icon-addtask.png">
+                <div>
+                    <img src="assets/img/icon-addtask.png">
+                </div>
                 <span>Add Task</span>
             </div>
             <div class="content-section">
-                <img src="assets/img/icon-contacts.png">
+                <div>
+                    <img src="assets/img/icon-contacts.png">
+                </div>
                 <span>Contacts</span>
             </div>
             <div class="content-section" style="margin-top: 180px;">
-                <img src="assets/img/icon-info.png">
+                <div>
+                    <img src="assets/img/icon-info.png">
+                </div>
                 <span>Legal notice</span>
             </div>
         </div>
-        <div class="innercontent">
-            <div class="topper">
-                <span>Kanban Project Management Tool</span>
-                <div class="img_topper">
-                    <img src="assets/img/questionmark_topper.png" class="questionmark_topper">
-                    <img src="assets/img/profile_pic.png" class="profile_pic">
+        <div class="topper">
+            <span>Kanban Project Management Tool</span>
+            <div class="img-topper">
+                <img src="assets/img/questionmark_topper.png" class="questionmark-topper">
+                <img src="assets/img/profile_pic.png" class="profile-pic">
+            </div>
+        </div>
+        <div class="inner-content">
+            <div class="headline">
+                <h1>Summary</h1>
+                <img src="assets/img/devideLineSummary.png">
+                <span>Everything in a nutshell!</span>
+            </div>
+            <div class="summary">
+                <div class="summary-information">
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                    <div></div>
+                </div>
+                <div class="greeting">
+                    
                 </div>
             </div>
         </div>
     </div>
-    
+
 </body>
+
 </html>
