first changes summary

--- a/summary.html
+++ b/summary.html
@@ -61,15 +61,19 @@
             </div>
             <div class="summary">
                 <div class="summary-information">
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
-                    <div></div>
+                    <div class="first-row">
+                        <div></div>
+                        <div></div>
+                        <div></div>
+                    </div>
+                    <div class="second-row"></div>
+                    <div class="third-row">
+                        <div></div>
+                        <div></div>
+                    </div>
                 </div>
                 <div class="greeting">
-                    
+
                 </div>
             </div>
         </div>
