--- a/contacts.html
+++ b/contacts.html
@@ -64,6 +64,78 @@
                     </div>
                 </div>
             </div>
+
+            <div class="alphabet-box">
+                <div class="first-letter-box">
+                    <h3>C</h3>
+                </div>
+
+                <div class="line"></div>
+
+                <div class="single-contact">
+                    <div class="initials">DM</div>
+                    <div class="name-email">
+                        <div class="name-small">Dennis Maier</div>
+                        <div class="email-small">test123@gmail.com</div>
+                    </div>
+                </div>
+                <div class="single-contact">
+                    <div class="initials">DM</div>
+                    <div class="name-email">
+                        <div class="name-small">Dennis Maier</div>
+                        <div class="email-small">test123@gmail.com</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="alphabet-box">
+                <div class="first-letter-box">
+                    <h3>D</h3>
+                </div>
+
+                <div class="line"></div>
+
+                <div class="single-contact">
+                    <div class="initials">DM</div>
+                    <div class="name-email">
+                        <div class="name-small">Dennis Maier</div>
+                        <div class="email-small">test123@gmail.com</div>
+                    </div>
+                </div>
+                <div class="single-contact">
+                    <div class="initials">DM</div>
+                    <div class="name-email">
+                        <div class="name-small">Dennis Maier</div>
+                        <div class="email-small">test123@gmail.com</div>
+                    </div>
+                </div>
+            </div>
+
+            <div class="alphabet-box">
+                <div class="first-letter-box">
+                    <h3>E</h3>
+                </div>
+
+                <div class="line"></div>
+
+                <div class="single-contact">
+                    <div class="initials">DM</div>
+                    <div class="name-email">
+                        <div class="name-small">Dennis Maier</div>
+                        <div class="email-small">test123@gmail.com</div>
+                    </div>
+                </div>
+                <div class="single-contact">
+                    <div class="initials">DM</div>
+                    <div class="name-email">
+                        <div class="name-small">Dennis Maier</div>
+                        <div class="email-small">test123@gmail.com</div>
+                    </div>
+                </div>
+            </div>
+
+
+
         </div>
 
         <div class="complete-contact">
