destop summary finished(1)

--- a/summary.html
+++ b/summary.html
@@ -15,7 +15,7 @@
     <div class="content">
         <div class="nav-bar">
             <img src="assets/img/logo_lefter.png">
-            <div class="content-section" style="margin-top: 100px;">
+            <div class="content-section active-content-section" style="margin-top: 100px;">
                 <div>
                     <img src="assets/img/icon-summary.png">
                 </div>
@@ -62,18 +62,52 @@
             <div class="summary">
                 <div class="summary-information">
                     <div class="first-row">
-                        <div></div>
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <h2>2</h2>
+                            <span>Tasks in Board</span>
+                        </div>
+                        <div>
+                            <h2>2</h2>
+                            <span>Tasks in Progress</span>
+                        </div>
+                        <div>
+                            <h2>2</h2>
+                            <span>Awaiting Feedback</span>
+                        </div>
                     </div>
-                    <div class="second-row"></div>
+                    <div class="second-row">
+                        <div class="urgent-tasks">
+                            <img src="assets/img/urgentSymbol.png">
+                            <div>
+                                <h2>1</h2>
+                                <span>Urgent</span>
+                            </div>
+                        </div>
+                        <div class="upcoming-deadline">
+                            <span style="font-size: 18px;"><strong>October 16, 2022</strong></span>
+                            <span style="font-size: 14px; margin-top: 6px;">Upcoming Deadline</span>
+                        </div>
+                    </div>
                     <div class="third-row">
-                        <div></div>
-                        <div></div>
+                        <div>
+                            <img src="assets/img/todoSymbolSummaryPen.png">
+                            <div class="content-div-row-3">
+                                <h2>1</h2>
+                                <span>To-do</span>
+                            </div>
+                        </div>
+                        <div>
+                            <img src="assets/img/doneSymbolSummary.png">
+                            <div class="content-div-row-3">
+                                <h2>1</h2>
+                                <span>Done</span>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="greeting">
-
+                    <span style="margin: 0;">Good morning,</span>
+                    <span class="greeting_name">Sofia Müller</span>
                 </div>
             </div>
         </div>
