--- a/add_task.html
+++ b/add_task.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Join - Add task</title>
+    <link rel="shortcut icon" href="assets/img/logo_lefter.png" type="image/x-icon">
 </head>
 <body>
     <h1>Add task</h1>
