--- a/summary.html
+++ b/summary.html
@@ -15,7 +15,40 @@
 </head>
 
 <body onload="render('summary')">
-    <div class="content">
+
+
+    <div class="topper">
+        <img src="assets/img/Capa 2join-logo.png">
+        <img src="assets/img/profile_pic.png" class="profile-pic">
+    </div>
+    <div class="footer">
+        <div class="content-section" id="summary-section">
+            <div>
+                <img src="assets/img/icon-summary.png">
+            </div>
+            <span>Summary</span>
+        </div>
+        <div class="content-section" id="board-section">
+            <div>
+                <img src="assets/img/icon-board.png">
+            </div>
+            <span>Board</span>
+        </div>
+        <div class="content-section" id="addtask-section">
+            <div>
+                <img src="assets/img/icon-addtask.png">
+            </div>
+            <span>Add Task</span>
+        </div>
+        <div class="content-section" id="contacts-section">
+            <div>
+                <img src="assets/img/icon-contacts.png">
+            </div>
+            <span>Contacts</span>
+        </div>
+    </div>
+
+    <div class="content-destop">
         <div w3-include-html="assets/templates/destop_template.html"></div>
         <div class="inner-content">
             <div class="headline">
@@ -72,6 +105,59 @@
                 <div class="greeting">
                     <span style="margin: 0;">Good morning,</span>
                     <span class="greeting_name">Sofia Müller</span>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div class="content-mobile">
+        <div class="headline-mobile">
+            <span style="font-size: 14px;">Kanban Project Management Tool</span>
+            <h1>Summary</h1>
+            <span style="color: #2A3647;">Everything in a nutshell!</span>
+        </div>
+        <div class="summary-information-mobile">
+            <div class="first-row">
+                <div>
+                    <h2>2</h2>
+                    <span>Tasks in Board</span>
+                </div>
+                <div>
+                    <h2>2</h2>
+                    <span>Tasks in Progress</span>
+                </div>
+                <div>
+                    <h2>2</h2>
+                    <span>Awaiting Feedback</span>
+                </div>
+            </div>
+            <div class="second-row">
+                <div class="urgent-tasks">
+                    <img src="assets/img/urgentSymbol.png">
+                    <div>
+                        <h2>1</h2>
+                        <span>Urgent</span>
+                    </div>
+                </div>
+                <div class="upcoming-deadline">
+                    <span style="font-size: 18px;"><strong>October 16, 2022</strong></span>
+                    <span style="font-size: 14px; margin-top: 6px;">Upcoming Deadline</span>
+                </div>
+            </div>
+            <div class="third-row">
+                <div>
+                    <img src="assets/img/todoSymbolSummaryPen.png">
+                    <div class="content-div-row-3">
+                        <h2>1</h2>
+                        <span>To-do</span>
+                    </div>
+                </div>
+                <div>
+                    <img src="assets/img/doneSymbolSummary.png">
+                    <div class="content-div-row-3">
+                        <h2>1</h2>
+                        <span>Done</span>
+                    </div>
                 </div>
             </div>
         </div>
